--- a/story.html
+++ b/story.html
@@ -10,42 +10,38 @@
       background-color: #0f0f0f;
       color: #fff;
       font-family: Arial, sans-serif;
-      height: 100vh;
-      overflow: hidden;
+      overflow-x: scroll;
+      scroll-snap-type: x mandatory;
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      position: relative;
+      height: 100vh;
     }
 
     .story-slide {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
+      scroll-snap-align: start;
+      flex: 0 0 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
+      position: relative;
       padding: 2rem;
       box-sizing: border-box;
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
     }
 
-    .story-slide.active {
-      opacity: 1;
-      z-index: 1;
+    .top-info {
+      position: absolute;
+      top: 1rem;
+      left: 1rem;
+      display: flex;
+      align-items: center;
     }
 
     .avatar {
-      width: 80px;
-      height: 80px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
-      margin-bottom: 1rem;
+      margin-right: 0.5rem;
       border: 2px solid #f44;
     }
 
@@ -53,13 +49,14 @@
       font-size: 1.1rem;
       font-weight: bold;
       color: #ccc;
-      margin-bottom: 1rem;
     }
 
     .message {
-      font-size: 1rem;
-      color: #aaa;
-      margin-bottom: 2rem;
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #fff;
+      text-align: center;
+      max-width: 80%;
     }
 
     .back-button {
@@ -74,30 +71,11 @@
       left: 10px;
       z-index: 999;
     }
-
-    .next-button {
-      position: fixed;
-      top: 50%;
-      right: 10px;
-      transform: translateY(-50%);
-      font-size: 1.5rem;
-      color: #ccc;
-      background-color: #1a1a1a;
-      border: 1px solid #444;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      z-index: 999;
-    }
   </style>
 </head>
 <body>
   <a class="back-button" href="index.html">← Back to Feed</a>
-  <div class="next-button" onclick="nextStory()">›</div>
+
   <div id="storyWrapper"></div>
 
   <script>
@@ -115,7 +93,6 @@
     ];
 
     const storyWrapper = document.getElementById("storyWrapper");
-    let currentIndex = 0;
 
     usernames.forEach((username, i) => {
       const message = messages[i % messages.length];
@@ -123,21 +100,16 @@
 
       const slide = document.createElement("div");
       slide.className = "story-slide";
-      if (i === 0) slide.classList.add("active");
       slide.innerHTML = `
-        <img class="avatar" src="${avatar}" alt="avatar">
-        <div class="username">@${username}</div>
+        <div class="top-info">
+          <img class="avatar" src="${avatar}" alt="avatar">
+          <div class="username">@${username}</div>
+        </div>
         <div class="message">${message}</div>
       `;
+
       storyWrapper.appendChild(slide);
     });
-
-    function nextStory() {
-      const slides = document.querySelectorAll(".story-slide");
-      slides[currentIndex].classList.remove("active");
-      currentIndex = (currentIndex + 1) % slides.length;
-      slides[currentIndex].classList.add("active");
-    }
   </script>
 </body>
 </html>
