--- a/story.html
+++ b/story.html
@@ -1,155 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Void Stories</title>
-<style>
-body {
-  margin: 0;
-  background-color: #0f0f0f;
-  color: #fff;
-  font-family: Arial, sans-serif;
-  overflow-x: scroll;
-  scroll-snap-type: x mandatory;
-  display: flex;
-  height: 100vh;
-  overflow: hidden;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Void Stories</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #0f0f0f;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      height: 100vh;
+    }
 
-.story-slide {
-  scroll-snap-align: start;
-  flex: 0 0 100%;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 2rem;
-  box-sizing: border-box;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-}
+    .story-slide {
+      scroll-snap-align: start;
+      flex: 0 0 100%;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 2rem;
+      box-sizing: border-box;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+      background-color: #1a1a1a;
+      border-radius: 12px;
+    }
 
-.story-slide.active {
-  opacity: 1;
-  z-index: 1;
-}
+    .story-slide.active {
+      opacity: 1;
+      z-index: 1;
+    }
 
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 2px solid #f44;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-}
+    .story-info {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      display: flex;
+      align-items: center;
+    }
 
-.username {
-  font-size: 1rem;
-  font-weight: bold;
-  color: #ccc;
-  position: absolute;
-  top: 80px;
-  left: 20px;
-}
+    .avatar {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      border: 2px solid #f44;
+      margin-right: 10px;
+    }
 
-.message {
-  font-size: 1.3rem;
-  font-weight: bold;
-  color: #eee;
-  text-align: center;
-  max-width: 80%;
-}
+    .username {
+      font-size: 1rem;
+      font-weight: bold;
+      color: #ccc;
+    }
 
-.back-button {
-  text-decoration: none;
-  color: #888;
-  font-size: 0.9rem;
-  border: 1px solid #444;
-  padding: 0.5rem 1rem;
-  border-radius: 6px;
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 999;
-}
+    .message {
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #eee;
+      text-align: center;
+      max-width: 80%;
+    }
 
-.next-button {
-  position: fixed;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  font-size: 1.5rem;
-  color: #ccc;
-  background-color: #1a1a1a;
-  border: 1px solid #444;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  z-index: 999;
-}
-</style>
+    .back-button {
+      text-decoration: none;
+      color: #888;
+      font-size: 0.9rem;
+      border: 1px solid #444;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 999;
+    }
+
+    .next-button {
+      position: fixed;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+      font-size: 1.5rem;
+      color: #ccc;
+      background-color: #1a1a1a;
+      border: 1px solid #444;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      z-index: 999;
+    }
+  </style>
 </head>
 <body>
-<a class="back-button" href="index.html">← Back to Feed</a>
-<div class="next-button" onclick="nextStory()">›</div>
-<div id="storyWrapper"></div>
+  <a class="back-button" href="index.html">← Back to Feed</a>
+  <div class="next-button" onclick="nextStory()">›</div>
+  <div id="storyWrapper"></div>
 
-<script>
-const usernames = [
-  "void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"
-];
+  <script>
+    const usernames = [
+      "void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"
+    ];
 
-const messages = [
-  "This story is entirely meaningless.",
-  "Nothing to see here.",
-  "Still wasting time, huh?",
-  "You've made it to another void.",
-  "One more swipe. Or five.",
-  "Fake story. Real regret."
-];
+    const messages = [
+      "This story is entirely meaningless.",
+      "Nothing to see here.",
+      "Still wasting time, huh?",
+      "You've made it to another void.",
+      "One more swipe. Or five.",
+      "Fake story. Real regret."
+    ];
 
-const storyWrapper = document.getElementById("storyWrapper");
-let currentIndex = 0;
+    const storyWrapper = document.getElementById("storyWrapper");
+    let currentIndex = 0;
 
-usernames.forEach((username, i) => {
-  const message = messages[i % messages.length];
-  const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
+    usernames.forEach((username, i) => {
+      const message = messages[i % messages.length];
+      const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
 
-  const slide = document.createElement("div");
-  slide.className = "story-slide";
-  if (i === 0) slide.classList.add("active");
+      const slide = document.createElement("div");
+      slide.className = "story-slide";
+      if (i === 0) slide.classList.add("active");
 
-  slide.innerHTML = `
-    <img class="avatar" src="${avatar}" alt="avatar">
-    <div class="username">@${username}</div>
-    <div class="message">${message}</div>
-  `;
+      slide.innerHTML = `
+        <div class="story-info">
+          <img class="avatar" src="${avatar}" alt="avatar">
+          <div class="username">@${username}</div>
+        </div>
+        <div class="message">${message}</div>
+      `;
 
-  storyWrapper.appendChild(slide);
-});
+      storyWrapper.appendChild(slide);
+    });
 
-function nextStory() {
-  const slides = document.querySelectorAll(".story-slide");
-  slides[currentIndex].classList.remove("active");
-  currentIndex = (currentIndex + 1) % slides.length;
-  slides[currentIndex].classList.add("active");
-}
-</script>
+    function nextStory() {
+      const slides = document.querySelectorAll(".story-slide");
+      slides[currentIndex].classList.remove("active");
+      currentIndex = (currentIndex + 1) % slides.length;
+      slides[currentIndex].classList.add("active");
+    }
+  </script>
 </body>
 </html>
