--- a/story.html
+++ b/story.html
@@ -8,116 +8,95 @@
     body {
       margin: 0;
       background-color: #0f0f0f;
-      color: #fff;
       font-family: Arial, sans-serif;
+      color: #fff;
       overflow: hidden;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      position: relative;
       height: 100vh;
+      position: relative;
     }
 
-    .story-slide {
-      scroll-snap-align: start;
-      flex: 0 0 100%;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
+    .story-box {
+      width: 320px;
+      height: 600px;
+      background-color: #1c1c1c;
+      border-radius: 16px;
+      box-shadow: 0 0 20px #000;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
       padding: 2rem;
-      box-sizing: border-box;
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
-      background-color: #1a1a1a;
-      border-radius: 12px;
+      position: relative;
     }
 
-    .story-slide.active {
-      opacity: 1;
-      z-index: 1;
-    }
-
-    .story-info {
+    .profile {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: 1rem;
+      left: 1rem;
       display: flex;
       align-items: center;
+      gap: 0.5rem;
     }
 
-    .avatar {
-      width: 50px;
-      height: 50px;
+    .profile img {
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
       border: 2px solid #f44;
-      margin-right: 10px;
     }
 
-    .username {
-      font-size: 1rem;
+    .profile span {
       font-weight: bold;
       color: #ccc;
+      font-size: 0.95rem;
     }
 
     .message {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       font-weight: bold;
       color: #eee;
-      text-align: center;
       max-width: 80%;
     }
 
-    .back-button {
-      text-decoration: none;
-      color: #888;
+    .back-button, .next-button {
+      position: absolute;
+      top: 10px;
       font-size: 0.9rem;
-      border: 1px solid #444;
       padding: 0.5rem 1rem;
       border-radius: 6px;
-      position: fixed;
-      top: 10px;
+      background-color: #1a1a1a;
+      border: 1px solid #444;
+      color: #aaa;
+      cursor: pointer;
+      z-index: 10;
+      text-decoration: none;
+    }
+
+    .back-button {
       left: 10px;
-      z-index: 999;
     }
 
     .next-button {
-      position: fixed;
-      top: 50%;
       right: 10px;
-      transform: translateY(-50%);
-      font-size: 1.5rem;
-      color: #ccc;
-      background-color: #1a1a1a;
-      border: 1px solid #444;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      z-index: 999;
     }
   </style>
 </head>
 <body>
-  <a class="back-button" href="index.html">← Back to Feed</a>
+  <a class="back-button" href="index.html">← Back</a>
   <div class="next-button" onclick="nextStory()">›</div>
-  <div id="storyWrapper"></div>
+
+  <div class="story-box" id="storyBox">
+    <!-- JS will populate this -->
+  </div>
 
   <script>
     const usernames = [
       "void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"
     ];
-
     const messages = [
       "This story is entirely meaningless.",
       "Nothing to see here.",
@@ -127,34 +106,28 @@
       "Fake story. Real regret."
     ];
 
-    const storyWrapper = document.getElementById("storyWrapper");
     let currentIndex = 0;
+    const storyBox = document.getElementById("storyBox");
 
-    usernames.forEach((username, i) => {
-      const message = messages[i % messages.length];
+    function renderStory(index) {
+      const username = usernames[index];
+      const message = messages[index % messages.length];
       const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
-
-      const slide = document.createElement("div");
-      slide.className = "story-slide";
-      if (i === 0) slide.classList.add("active");
-
-      slide.innerHTML = `
-        <div class="story-info">
-          <img class="avatar" src="${avatar}" alt="avatar">
-          <div class="username">@${username}</div>
+      storyBox.innerHTML = `
+        <div class="profile">
+          <img src="${avatar}" alt="avatar">
+          <span>@${username}</span>
         </div>
         <div class="message">${message}</div>
       `;
-
-      storyWrapper.appendChild(slide);
-    });
+    }
 
     function nextStory() {
-      const slides = document.querySelectorAll(".story-slide");
-      slides[currentIndex].classList.remove("active");
-      currentIndex = (currentIndex + 1) % slides.length;
-      slides[currentIndex].classList.add("active");
+      currentIndex = (currentIndex + 1) % usernames.length;
+      renderStory(currentIndex);
     }
+
+    renderStory(currentIndex);
   </script>
 </body>
 </html>
