--- a/story.html
+++ b/story.html
@@ -26,7 +26,7 @@
     }
 
     .story-box {
-      width: 320px;
+      width: 480px; /* Increased width */
       height: 100vh;
       background-color: #1c1c1c;
       border-radius: 12px;
