--- a/index.html
+++ b/index.html
@@ -150,29 +150,7 @@ main {
   border-radius: 4px;
   cursor: pointer;
 }
-.like-popup {
-  position: absolute;
-  bottom: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #1a1a1a;
-  border: 1px solid #444;
-  padding: 10px 18px;
-  border-radius: 6px;
-  color: #bbb;
-  font-size: 1.1rem;
-  opacity: 0;
-  animation: fadePop 3s forwards;
-  pointer-events: none;
-  z-index: 2;
-}
-@keyframes fadePop {
-  0% { opacity: 0; transform: translateX(-50%) translateY(10px); }
-  20% { opacity: 1; }
-  100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
-}
-#waste-counter,
-#like-counter {
+.live-counter {
   position: fixed;
   font-size: 0.9rem;
   color: #666;
@@ -182,14 +160,9 @@ main {
   border: 1px solid #333;
   z-index: 999;
 }
-#waste-counter {
-  bottom: 50px;
-  right: 10px;
-}
-#like-counter {
-  bottom: 50px;
-  left: 10px;
-}
+#waste-counter { bottom: 50px; right: 10px; }
+#like-counter { bottom: 80px; right: 10px; }
+#scroll-counter { bottom: 110px; right: 10px; }
 .bottom-nav {
   position: fixed;
   bottom: 0;
@@ -215,11 +188,11 @@ main {
     <div id="notificationDropdown"></div>
   </div>
 </header>
-
 <div class="stories" id="storiesBar"></div>
 <main id="feed"></main>
-<div id="waste-counter">Minutes of life wasted here: 0</div>
-<div id="like-counter">Likes given: 0</div>
+<div id="waste-counter" class="live-counter"></div>
+<div id="like-counter" class="live-counter"></div>
+<div id="scroll-counter" class="live-counter"></div>
 <div class="bottom-nav">
   <a href="index.html">🏠</a>
   <a href="search.html">🔍</a>
@@ -232,18 +205,8 @@ const feed = document.getElementById("feed");
 const storiesBar = document.getElementById("storiesBar");
 const notifDropdown = document.getElementById("notificationDropdown");
 const notifIcon = document.getElementById("notifIcon");
-
 const fakeUsernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"];
-const fakeMessages = [
-  "Empty Post",
-  "You’re still here?",
-  "This means nothing.",
-  "The feed is feeding itself.",
-  "Keep going. Or don’t.",
-  "Static. Again.",
-  "Are you okay?",
-  "Just one more... nothing."
-];
+const fakeMessages = ["Empty Post", "You’re still here?", "This means nothing.", "The feed is feeding itself.", "Keep going. Or don’t.", "Static. Again.", "Are you okay?", "Just one more... nothing."];
 
 fakeUsernames.forEach(username => {
   const story = document.createElement("a");
@@ -258,16 +221,17 @@ let likesGiven = parseInt(localStorage.getItem("likesGiven")) || 0;
 let scrollCount = parseInt(localStorage.getItem("scrollCount")) || 0;
 let notifications = [];
 
-const counter = document.getElementById("waste-counter");
-counter.textContent = `Minutes of life wasted here: ${Math.floor(secondsWasted / 60)}`;
+function updateStats() {
+  document.getElementById("waste-counter").textContent = `Minutes wasted: ${Math.floor(secondsWasted / 60)}`;
+  document.getElementById("like-counter").textContent = `Likes given: ${likesGiven}`;
+  document.getElementById("scroll-counter").textContent = `Scrolls done: ${scrollCount}`;
+}
+
 setInterval(() => {
   secondsWasted++;
-  counter.textContent = `Minutes of life wasted here: ${Math.floor(secondsWasted / 60)}`;
   localStorage.setItem("secondsWasted", secondsWasted);
+  updateStats();
 }, 1000);
-
-const likeCounter = document.getElementById("like-counter");
-likeCounter.textContent = `Likes given: ${likesGiven}`;
 
 function createPost(message) {
   const post = document.createElement("div");
@@ -297,7 +261,7 @@ function createPost(message) {
 function handleLike(btn) {
   likesGiven++;
   localStorage.setItem("likesGiven", likesGiven);
-  likeCounter.textContent = `Likes given: ${likesGiven}`;
+  updateStats();
   showPopup(btn, ["This like did nothing.", "Validation... denied.", "+0 dopamine.", "Why tho?", "Still empty."]);
 }
 
@@ -365,6 +329,7 @@ for (let i = 0; i < 10; i++) {
 window.addEventListener("scroll", () => {
   scrollCount++;
   localStorage.setItem("scrollCount", scrollCount);
+  updateStats();
   if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 50) {
     for (let i = 0; i < 5; i++) {
       const msg = fakeMessages[Math.floor(Math.random() * fakeMessages.length)];
@@ -373,21 +338,7 @@ window.addEventListener("scroll", () => {
   }
 });
 
-function checkAchievements() {
-  const unlocked = JSON.parse(localStorage.getItem("achievements")) || [];
-  const addAchievement = (key) => {
-    if (!unlocked.includes(key)) {
-      unlocked.push(key);
-      localStorage.setItem("achievements", JSON.stringify(unlocked));
-    }
-  };
-  if (secondsWasted >= 60) addAchievement("doomscroll");
-  if (likesGiven >= 10) addAchievement("liker");
-  if (secondsWasted >= 300) addAchievement("voidpro");
-  if (scrollCount >= 100) addAchievement("scroller");
-  setTimeout(checkAchievements, 5000);
-}
-checkAchievements();
+updateStats();
 </script>
 </body>
 </html>
